Smash headlong into persistent homology

--- a/references.bib
+++ b/references.bib
@@ -273,6 +273,19 @@ title = {{Stereological analysis of the spatial Poisson-Voronoi tessellation}},
 volume = {175},
 year = {1994}
 }
+@article{Robins2017,
+author = {Robins, V and Hiraoka, Y and Saadatfar, M and Takeuchi, H and Francois, N},
+doi = {10.1038/ncomms15082},
+file = {:Users/David/Documents/Work/DPhil/Papers/ncomms15082.pdf:pdf},
+journal = {Nat. Commun.},
+number = {May},
+pages = {1--11},
+publisher = {Nature Publishing Group},
+title = {{Pore configuration landscape of granular crystallization}},
+url = {http://dx.doi.org/10.1038/ncomms15082},
+volume = {8},
+year = {2017}
+}
 @article{Zhu2016,
 author = {Zhu, Taishan and Ertekin, Elif},
 doi = {10.1021/acs.nanolett.6b00557},
@@ -490,6 +503,16 @@ title = {{Atomic structure of a metal-supported two-dimensional germania film}},
 volume = {97},
 year = {2018}
 }
+@article{Horak2009,
+author = {Horak, Danijela and Maleti, Slobodan and Rajkovi, Milan},
+doi = {10.1088/1742-5468/2009/03/P03034},
+file = {:Users/David/Documents/Work/DPhil/Papers/Horak{\_}2009{\_}J.{\_}Stat.{\_}Mech.{\_}2009{\_}P03034.pdf:pdf},
+journal = {J. Stat. Mech.},
+pages = {P03034},
+title = {{Persistent homology of complex networks}},
+volume = {1},
+year = {2009}
+}
 @article{Buzano2004,
 author = {Buzano, C and Stefanis, E De and Pelizzola, A and Pretti, M},
 doi = {10.1103/PhysRevE.69.061502},
@@ -666,6 +689,16 @@ pages = {3--12},
 title = {{Ultrathin Two-Dimensional Inorganic Materials : New Opportunities for Solid State Nanochemistry}},
 volume = {48},
 year = {2015}
+}
+@article{Onodera2019,
+author = {Onodera, Yohei and Kohara, Shinji and Tahara, Shuta and Masuno, Atsunobu and Inoue, Hiroyuki and Shiga, Motoki and Hirata, Akihiko and Tsuchiya, Koichi and Hiraoka, Yasuaki and Obayashi, Ippei and Ohara, Koji and Mizuno, Akitoshi and Sakata, Osami},
+file = {:Users/David/Documents/Work/DPhil/Papers/127{\_}19143.pdf:pdf},
+journal = {J. Ceram. Soc. Japan},
+number = {12},
+pages = {853--863},
+title = {{Understanding diffraction patterns of glassy, liquid and amorphous materials via persistent homology analyses}},
+volume = {127},
+year = {2019}
 }
 @article{Aboav1970,
 author = {Aboav, D A},
@@ -944,6 +977,14 @@ title = {{Direct visualization of the interfacial position of colloidal particle
 volume = {6},
 year = {2014}
 }
+@book{gudhi,
+author = {{The GUDHI Project}},
+edition = {3.2.0},
+publisher = {GUDHI Editorial Board},
+title = {{GUDHI User and Reference Manual}},
+url = {https://gudhi.inria.fr/doc/3.2.0/},
+year = {2020}
+}
 @article{Ressouche2009,
 author = {Ressouche, E and Simonet, V and Canals, B and Gospodinov, M and Skumryev, V},
 doi = {10.1103/PhysRevLett.103.267204},
@@ -953,6 +994,16 @@ pages = {267204},
 title = {{Magnetic Frustration in an Iron-Based Cairo Pentagonal Lattice}},
 volume = {103},
 year = {2009}
+}
+@article{Fugacci2016,
+author = {Fugacci, Ulderico and Scaramuccia, Sara and Iuricich, Federico and Floriani, Leila De},
+doi = {10.2312/stag.20161358},
+file = {:Users/David/Documents/Work/DPhil/Papers/stag2016-2.pdf:pdf},
+journal = {Smart Tools Apps Comput. Graph.},
+keywords = {2,3,according to acm ccs,categories and subject descriptors,computer and education,computer and information,computer science education,k,persistent homology,science education,shape analysis,topological data analysis},
+number = {October},
+title = {{Persistent homology: a step-by-step introduction for newcomers}},
+year = {2016}
 }
 @article{Guan2019,
 author = {Guan, Runnan and Jin, Fei and Yang, Shangfeng and Tamm, Nadezhda B and Troyanov, Sergey I},
@@ -1011,6 +1062,15 @@ url = {http://dx.doi.org/10.1063/1.4995432},
 volume = {147},
 year = {2017}
 }
+@article{Zomorodian2005,
+author = {Zomorodian, Afra and Carlsson, Gunnar},
+file = {:Users/David/Documents/Work/DPhil/Papers/Zomorodian-Carlsson2005{\_}Article{\_}ComputingPersistentHomology.pdf:pdf},
+journal = {Discret. Comput Geom},
+pages = {249--274},
+title = {{Computing Persistent Homology}},
+volume = {33},
+year = {2005}
+}
 @book{Nocedal2006,
 author = {Nocedal, Jorge and Wright, Stephen J},
 edition = {2},
@@ -1019,6 +1079,17 @@ isbn = {9780387303031},
 publisher = {Springer},
 title = {{Numerical Optimization}},
 year = {2006}
+}
+@article{Edelsbrunner2008,
+author = {Edelsbrunner, Herbert and Harer, John},
+doi = {10.1090/conm/453/08802},
+file = {:Users/David/Documents/Work/DPhil/Papers/10.1.1.864.2543.pdf:pdf},
+isbn = {0011051000},
+journal = {Contemp. Math.},
+pages = {257},
+title = {{Persistent homology - a survey}},
+volume = {453},
+year = {2008}
 }
 @article{Djordjevic1995,
 author = {Djordjevic, B R and Thorpe, M F and Wooten, F},
@@ -1391,6 +1462,17 @@ title = {{Growth and structure of crystalline silica sheet on Ru(0001)}},
 volume = {105},
 year = {2010}
 }
+@article{Carter2018,
+author = {Carter, Benjamin M G D and Turci, Francesco and Ronceray, Pierre and Royall, C Patrick},
+doi = {10.1063/1.5024462},
+file = {:Users/David/Documents/Work/DPhil/Papers/1.5024462.pdf:pdf},
+journal = {J. Chem. Phys.},
+pages = {204511},
+title = {{Structural covariance in the hard sphere fluid}},
+url = {http://dx.doi.org/10.1063/1.5024462},
+volume = {148},
+year = {2018}
+}
 @article{Arcagni2017,
 author = {Arcagni, Alberto and Grassi, Rosanna and Stefani, Silvana and Torriero, Anna},
 doi = {10.1016/j.ejor.2017.04.028},
@@ -1436,6 +1518,22 @@ title = {{Elementary plastic events in a Zachariasen glass under shear and press
 volume = {9},
 year = {2020}
 }
+@article{Steinberg2019,
+author = {Steinberg, Lee and Russo, John and Frey, Jeremy},
+doi = {10.1186/s13321-019-0369-0},
+file = {:Users/David/Documents/Work/DPhil/Papers/s13321-019-0369-0-2.pdf:pdf},
+isbn = {1332101903690},
+issn = {1758-2946},
+journal = {J. Cheminform.},
+keywords = {Persistent homology,Topological data analysis,Water networks,persistent homology,topological data analysis,water networks},
+number = {48},
+pages = {1--11},
+publisher = {Springer International Publishing},
+title = {{A new topological descriptor for water network structure}},
+url = {https://doi.org/10.1186/s13321-019-0369-0},
+volume = {11},
+year = {2019}
+}
 @article{Roy2018,
 abstract = {The recent experimental discovery of a semi two-dimensional silica glass has offered a realistic description of the random network theory of a silica glass structure, initially discussed by Zachariasen. To study the structure formation of silica in two dimensions, we introduce a two-body force field, based on a soft core Yukawa potential. The different configurations, sampled via Molecular dynamics simulations, can be directly compared with the experimental structures, which have been provided in the literature. The parameters of the force field are obtained from comparison of the nearest-neighbor distances between experiment and simulation. Further key properties such as angle distributions, distribution of ring sizes and triplets of rings are analyzed and compared with the experiment. Of particular interest is the spatial correlation of ring sizes. In general, we observe a very good agreement between experiment and simulation. Additional insight from the simulations is provided about the temporal and spatial stability of the rings in dependence of their size.},
 author = {Roy, Projesh Kumar and Heyde, Markus and Heuer, Andreas},
@@ -1467,6 +1565,16 @@ pages = {3888},
 title = {{Random Sequential Addition of Hard Spheres to a Volume}},
 volume = {44},
 year = {1966}
+}
+@article{Wasserman2018,
+author = {Wasserman, Larry},
+file = {:Users/David/Documents/Work/DPhil/Papers/annurev-statistics-031017-100045.pdf:pdf},
+journal = {Annu. Rev. Stat. Appl.},
+keywords = {clustering,density trees,dimension reduction,estimation,manifold,persistent homology},
+pages = {501},
+title = {{Topological Data Analysis}},
+volume = {5},
+year = {2018}
 }
 @article{Boots1984,
 author = {Boots, B. N.},
@@ -1758,6 +1866,18 @@ title = {{Molecular dynamics simulations of boron-nitride nanotubes embedded in 
 volume = {39},
 year = {2007}
 }
+@article{Nakamura2015,
+author = {Nakamura, Takenobu and Hiraoka, Yasuaki and Hirata, Akihiko and Escolar, Emerson G and Nishiura, Yasumasa},
+doi = {10.1088/0957-4484/26/30/304001},
+file = {:Users/David/Documents/Work/DPhil/Papers/Nakamura{\_}2015{\_}Nanotechnology{\_}26{\_}304001-2.pdf:pdf},
+journal = {Nanotechnology},
+keywords = {appear in colour only,glass,in the online journal,medium-range order,persistent homology,some fi gures may},
+pages = {304001},
+publisher = {IOP Publishing},
+title = {{Persistent homology and many-body atomic structure for medium-range order in the glass}},
+volume = {26},
+year = {2015}
+}
 @book{Landau2014,
 author = {Landau, David P and Binder, Kurt},
 doi = {10.1017/CBO9781139696463},
@@ -1844,6 +1964,16 @@ pages = {1231--1237},
 title = {{Grain coordination in plane sections of polycrystals}},
 volume = {27},
 year = {1979}
+}
+@article{Xia2015,
+author = {Xia, Kelin and Feng, Xin and Tong, Yiying and Wei, Guo},
+doi = {10.1002/jcc.23816},
+file = {:Users/David/Documents/Work/DPhil/Papers/Xia{\_}et{\_}al-2015-Journal{\_}of{\_}Computational{\_}Chemistry.pdf:pdf},
+journal = {J. Comput. Chem.},
+pages = {408--422},
+title = {{Persistent Homology for the Quantitative Prediction of Fullerene Stability}},
+volume = {36},
+year = {2015}
 }
 @article{Fujita2016,
 author = {Fujita, Daishi and Ueda, Yoshihiro and Sato, Sota and Mizuno, Nobuhiro and Kumasaka, Takashi and Fujita, Makoto},
@@ -2084,6 +2214,19 @@ title = {{A note on the Aboav-Weaire law}},
 volume = {205},
 year = {1994}
 }
+@article{Otter2017,
+author = {Otter, Nina and Porter, Mason A and Tillmann, Ulrike and Grindrod, Peter and Harrington, Heather A},
+doi = {10.1140/epjds/s13688-017-0109-5},
+file = {:Users/David/Documents/Work/DPhil/Papers/s13688-017-0109-5.pdf:pdf},
+journal = {EPJ Data Sci.},
+keywords = {persistent homology,point-cloud data,topological data analysis},
+pages = {1},
+publisher = {The Author(s)},
+title = {{A roadmap for the computation of persistent homology}},
+url = {http://dx.doi.org/10.1140/epjds/s13688-017-0109-5},
+volume = {6},
+year = {2017}
+}
 @article{Kim2016,
 author = {Kim, Sangwoo and Cassidy, Justin J and Yang, Boyuan and Carthew, Richard W and Hilgenfeldt, Sascha},
 doi = {10.1016/j.bpj.2016.11.004},
@@ -2106,6 +2249,26 @@ pages = {4899--4902},
 title = {{Properties of a Continuous-Random-Network Model for Amorphous Systems}},
 volume = {81},
 year = {1998}
+}
+@article{Gutierrez2019,
+author = {Gutierrez, Abraham and Buchet, Micka{\"{e}}l and Clair, Sylvain},
+doi = {10.1002/cphc.201900257},
+file = {:Users/David/Documents/Work/DPhil/Papers/Gutierrez{\_}et{\_}al-2019-ChemPhysChem.pdf:pdf},
+journal = {ChemPhysChem},
+pages = {1--7},
+title = {{Persistent Homology To Quantify the Quality of Surface- Supported Covalent Networks}},
+volume = {20},
+year = {2019}
+}
+@article{Jiang2018,
+author = {Jiang, Fei and Tsuji, Takeshi and Shirai, Tomoyuki},
+doi = {10.1029/2017WR021864},
+file = {:Users/David/Documents/Work/DPhil/Papers/Jiang{\_}et{\_}al-2018-Water{\_}Resources{\_}Research.pdf:pdf},
+journal = {Water Resour. Res.},
+pages = {4150--4163},
+title = {{Pore Geometry Characterization by Persistent Homology Theory}},
+volume = {54},
+year = {2018}
 }
 @article{Jaster1999,
 author = {Jaster, A},
@@ -2325,6 +2488,17 @@ pages = {045102(R)},
 title = {{Fast Monte Carlo algorithm for supercooled soft spheres}},
 volume = {63},
 year = {2001}
+}
+@article{Hiraoka2016,
+author = {Hiraoka, Yasuaki and Nakamura, Takenobu and Hirata, Akihiko and Escolar, Emerson G and Matsue, Kaname},
+doi = {10.1073/pnas.1520877113/-/DCSupplemental.www.pnas.org/cgi/doi/10.1073/pnas.1520877113},
+file = {:Users/David/Documents/Work/DPhil/Papers/26470604.pdf:pdf},
+journal = {PNAS},
+number = {26},
+pages = {7035--7040},
+title = {{Hierarchical structures of amorphous solids characterized by persistent homology}},
+volume = {113},
+year = {2016}
 }
 @article{Marcus1997,
 author = {Marcus, Andrew H and Rice, Stuart A},
