--- a/text/ph.tex
+++ b/text/ph.tex
@@ -77,6 +77,7 @@ The last subcomplex, $\mathbf{K}_\infty$, will contain all the determined simpli
 Crucially, for the alpha complex, this will be equivalent to the Delaunay triangulation.
 This is the motivation for choosing the alpha complex, as the Delaunay triangulation (which has already appeared throughout this thesis as the dual of the Voronoi diagram), is well defined in two dimensions. 
 As such it provides the best opportunity to relate the results of persistent homology to well understood systems.
+In two dimensions, the alpha complex therefore has a 
 
 \begin{figure}[tb]
 	\centering
@@ -340,6 +341,82 @@ The question is whether these visualisations can be systematically interpreted t
 \end{figure}
 
 
+%\begin{figure}[tb]
+%	\centering
+%     
+%      \begin{subfigure}[b]{0.45\textwidth}
+%         \centering
+%         \includegraphics[width=0.75\textwidth]{./figures/ph/sl_hex_120.pdf}
+%         \caption{}
+%         \label{fig:slhex}
+%     \end{subfigure}
+%     
+%	 \vspace{0.5cm}     
+%     \begin{subfigure}[b]{0.45\textwidth}
+%         \centering
+%         \includegraphics[width=0.9\textwidth]{./figures/ph/sl_hex_60.pdf}
+%         \caption{}
+%         \label{fig:slhex}
+%     \end{subfigure}
+%     \hfill
+%     \begin{subfigure}[b]{0.45\textwidth}
+%         \centering
+%         \includegraphics[width=0.9\textwidth]{./figures/ph/sl_hex_90.pdf}
+%         \caption{}
+%         \label{fig:slhex}
+%     \end{subfigure}
+%     
+%     \vspace{0.5cm}
+%     \begin{subfigure}[b]{0.45\textwidth}
+%         \centering
+%         \includegraphics[width=0.8\textwidth]{./figures/ph/sl_hex_150.pdf}
+%         \caption{}
+%         \label{fig:slhex}
+%     \end{subfigure}
+%     \hfill
+%     \begin{subfigure}[b]{0.45\textwidth}
+%         \centering
+%         \includegraphics[width=0.7\textwidth]{./figures/ph/sl_hex_180.pdf}
+%         \caption{}
+%         \label{fig:slhex}
+%     \end{subfigure}
+% 
+%	\caption{XXXX}
+%	\label{fig:}
+%\end{figure}
+
+%\begin{figure}[tb]
+%	\centering
+%     
+%      \begin{subfigure}[b]{0.45\textwidth}
+%         \centering
+%         \includegraphics[width=0.85\textwidth]{./figures/ph/sl_oct_135.pdf}
+%         \caption{$\theta_1=134^\circ$, $\theta_2=135^\circ$, \\$\theta_3=136^\circ$}
+%         \label{fig:sloct}
+%     \end{subfigure}
+%     
+%     \vspace{0.5cm}
+%     \hfill
+%       \begin{subfigure}[b]{0.45\textwidth}
+%         \centering
+%         \includegraphics[width=0.95\textwidth]{./figures/ph/sl_oct_90.pdf}
+%         \caption{$\theta_1=112^\circ$, $\theta_2=135^\circ$, \\$\theta_3=158^\circ$}
+%         \label{fig:sloct}
+%     \end{subfigure}
+%     \hfill
+%       \begin{subfigure}[b]{0.45\textwidth}
+%         \centering
+%         \includegraphics[width=0.85\textwidth]{./figures/ph/sl_oct_112.pdf}
+%         \caption{$\theta_1=90^\circ$, $\theta_2=135^\circ$, \\$\theta_3=180^\circ$}
+%         \label{fig:sloct}
+%     \end{subfigure}
+%     
+%     
+%
+%	\caption{XXXX}
+%	\label{fig:}
+%\end{figure}
+
 
 
 \begin{figure}[tb]
@@ -347,42 +424,40 @@ The question is whether these visualisations can be systematically interpreted t
      
       \begin{subfigure}[b]{0.45\textwidth}
          \centering
-         \includegraphics[width=0.75\textwidth]{./figures/ph/sl_hex_120.pdf}
-         \caption{}
-         \label{fig:slhex}
-     \end{subfigure}
-     
-	 \vspace{0.5cm}     
-     \begin{subfigure}[b]{0.45\textwidth}
-         \centering
-         \includegraphics[width=0.9\textwidth]{./figures/ph/sl_hex_60.pdf}
-         \caption{}
-         \label{fig:slhex}
+         \includegraphics[width=0.45\textwidth]{./figures/ph/sl_oct_b3_135x.pdf}
+         \caption{\phantom{xxx} \\ \phantom{xxx}}
+         \label{fig:sloct}
      \end{subfigure}
      \hfill
      \begin{subfigure}[b]{0.45\textwidth}
          \centering
-         \includegraphics[width=0.9\textwidth]{./figures/ph/sl_hex_90.pdf}
-         \caption{}
-         \label{fig:slhex}
+         \includegraphics[width=0.7\textwidth]{./figures/ph/sl_oct_b3_135.pdf}
+         \caption{$\theta_1=135^\circ$; \\$\left(0.50,1.31\right)$}
+         \label{fig:sloct}
      \end{subfigure}
      
      \vspace{0.5cm}
-     \begin{subfigure}[b]{0.45\textwidth}
+   \begin{subfigure}[b]{0.32\textwidth}
          \centering
-         \includegraphics[width=0.8\textwidth]{./figures/ph/sl_hex_150.pdf}
-         \caption{}
-         \label{fig:slhex}
+         \includegraphics[width=\textwidth]{./figures/ph/sl_oct_b3_150.pdf}
+         \caption{$\theta_1=150^\circ$; \\$\left(0.50,1.12\right)$}
+         \label{fig:sloct}
      \end{subfigure}
      \hfill
-     \begin{subfigure}[b]{0.45\textwidth}
+     \begin{subfigure}[b]{0.32\textwidth}
          \centering
-         \includegraphics[width=0.7\textwidth]{./figures/ph/sl_hex_180.pdf}
-         \caption{}
-         \label{fig:slhex}
+         \includegraphics[width=\textwidth]{./figures/ph/sl_oct_b3_165.pdf}
+         \caption{$\theta_1=165^\circ$; \\$\left(0.50,0.91\right)$, $\left(0.76,0.82\right)$ }
+         \label{fig:sloct}
      \end{subfigure}
- 
-     
+      \hfill
+     \begin{subfigure}[b]{0.32\textwidth}
+         \centering
+         \includegraphics[width=0.9\textwidth]{./figures/ph/sl_oct_b3_180.pdf}
+         \caption{$\theta_1=180^\circ$; \\$\left(0.50,0.71\right)$}
+         \label{fig:sloct}
+     \end{subfigure}
+   
    
 	\caption{XXXX}
 	\label{fig:}
@@ -390,58 +465,94 @@ The question is whether these visualisations can be systematically interpreted t
 
 
 
-
-
-
-
-
 \begin{figure}[tb]
 	\centering
      
       \begin{subfigure}[b]{0.45\textwidth}
          \centering
-         \includegraphics[width=0.85\textwidth]{./figures/ph/sl_oct_135.pdf}
-         \caption{$\theta_1=134^\circ$, $\theta_2=135^\circ$, \\$\theta_3=136^\circ$}
+         \includegraphics[width=0.45\textwidth]{./figures/ph/sl_oct_b4_135x.pdf}
+         \caption{\phantom{xxx} \\ \phantom{xxx}}
+         \label{fig:sloct}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.45\textwidth}
+         \centering
+         \includegraphics[width=0.8\textwidth]{./figures/ph/sl_oct_b4_135.pdf}
+         \caption{$\theta_1=135^\circ$, $\theta_2=135^\circ$; \\$\left(0.50,1.31\right)$}
          \label{fig:sloct}
      \end{subfigure}
      
      \vspace{0.5cm}
-     \hfill
-       \begin{subfigure}[b]{0.45\textwidth}
+   \begin{subfigure}[b]{0.32\textwidth}
          \centering
-         \includegraphics[width=0.95\textwidth]{./figures/ph/sl_oct_90.pdf}
-         \caption{$\theta_1=112^\circ$, $\theta_2=135^\circ$, \\$\theta_3=158^\circ$}
+         \includegraphics[width=0.95\textwidth]{./figures/ph/sl_oct_b4_150.pdf}
+         \caption{$\theta_1=150^\circ$, $\theta_2=135^\circ$; \\$\left(0.50,1.15\right)$, $\left(1.12,1.15\right)$}
          \label{fig:sloct}
      \end{subfigure}
      \hfill
-       \begin{subfigure}[b]{0.45\textwidth}
+     \begin{subfigure}[b]{0.32\textwidth}
          \centering
-         \includegraphics[width=0.85\textwidth]{./figures/ph/sl_oct_112.pdf}
-         \caption{$\theta_1=90^\circ$, $\theta_2=135^\circ$, \\$\theta_3=180^\circ$}
+         \includegraphics[width=0.85\textwidth]{./figures/ph/sl_oct_b4_165.pdf}
+         \caption{$\theta_1=165^\circ$, $\theta_2=135^\circ$; \\$\left(0.50,1.00\right)$, $\left(0.92,1.00\right)$}
          \label{fig:sloct}
      \end{subfigure}
-     
-     
+      \hfill
+     \begin{subfigure}[b]{0.32\textwidth}
+         \centering
+         \includegraphics[width=0.75\textwidth]{./figures/ph/sl_oct_b4_180.pdf}
+         \caption{$\theta_1=180^\circ$, $\theta_2=135^\circ$; \\$\left(0.50,0.87\right)$, $\left(0.71,0.87\right)$}
+         \label{fig:sloct}
+     \end{subfigure}
+   
+   \vspace{0.5cm}
+   \begin{subfigure}[b]{0.32\textwidth}
+         \centering
+         \includegraphics[width=0.8\textwidth]{./figures/ph/sl_oct_b2_a.pdf}
+         \caption{$\theta_1=135^\circ$, $\theta_2=170^\circ$; \\$\left(0.50,0.93\right)$, $\left(0.54,0.59\right)$}
+         \label{fig:sloct}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.32\textwidth}
+         \centering
+         \includegraphics[width=0.8\textwidth]{./figures/ph/sl_oct_b2_b.pdf}
+         \caption{$\theta_1=150^\circ$, $\theta_2=160^\circ$; \\$\left(0.50,0.88\right)$, $\left(0.57,0.59\right)$}
+         \label{fig:sloct}
+     \end{subfigure}
+      \hfill
+     \begin{subfigure}[b]{0.32\textwidth}
+         \centering
+         \includegraphics[width=0.8\textwidth]{./figures/ph/sl_oct_b2_c.pdf}
+         \caption{$\theta_1=180^\circ$, $\theta_2=140^\circ$; \\$\left(0.50,0.81\right)$, $\left(0.64,0.65\right)$}
+         \label{fig:sloct}
+     \end{subfigure}
 
 	\caption{XXXX}
 	\label{fig:}
 \end{figure}
 
+
+
+
+
 \begin{figure}[tb]
 	\centering
      
-      \begin{subfigure}[b]{0.45\textwidth}
+     \begin{subfigure}[b]{0.48\textwidth}
          \centering
-         \includegraphics[width=\textwidth]{./figures/ph/sl_oct.pdf}
+         \includegraphics[width=0.87\textwidth]{./figures/ph/blines.pdf}
          \caption{}
-         \label{fig:slx}
+         \label{fig:blines}
+     \end{subfigure}
+     \hfill
+      \begin{subfigure}[b]{0.48\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/ph/blines_overlay.pdf}
+         \caption{}
+         \label{fig:blines}
      \end{subfigure}
  
-     
-     
-
 	\caption{XXXX}
-	\label{fig:}
+	\label{fig:blines}
 \end{figure}
 
 
@@ -454,6 +565,13 @@ The question is whether these visualisations can be systematically interpreted t
          \caption{}
          \label{fig:trpda}
      \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.48\textwidth}
+         \centering
+         \includegraphics[width=\textwidth]{./figures/ph/tri_raft_beta1_cut.pdf}
+         \caption{}
+         \label{fig:trpda}
+     \end{subfigure}
 
 	\caption{XXXX}
 	\label{fig:}
@@ -462,39 +580,33 @@ The question is whether these visualisations can be systematically interpreted t
 \begin{figure}[tb]
 	\centering
      
-      \begin{subfigure}[b]{0.48\textwidth}
-         \centering
-         \includegraphics[width=\textwidth]{./figures/ph/tri_lt_dist_t-4500.pdf}
-         \caption{}
-         \label{fig:trpda}
-     \end{subfigure}
-     \hfill
-      \begin{subfigure}[b]{0.48\textwidth}
-         \centering
-         \includegraphics[width=\textwidth]{./figures/ph/tri_lt_dist_t-3600.pdf}
-         \caption{}
-         \label{fig:trpda}
-     \end{subfigure}
-     \hfill
-     
      \begin{subfigure}[b]{0.48\textwidth}
          \centering
-         \includegraphics[width=\textwidth]{./figures/ph/tri_lt_dist_t-2700.pdf}
+         \includegraphics[width=0.87\textwidth]{./figures/ph/tr_pk_ph.pdf}
          \caption{}
-         \label{fig:trpda}
+         \label{fig:trpkph}
      \end{subfigure}
      \hfill
-      \begin{subfigure}[b]{0.48\textwidth}
+     \begin{subfigure}[b]{0.48\textwidth}
          \centering
-         \includegraphics[width=\textwidth]{./figures/ph/tri_lt_dist_t-1800.pdf}
+         \includegraphics[width=0.87\textwidth]{./figures/ph/tr_pk_true.pdf}
          \caption{}
-         \label{fig:trpda}
+         \label{fig:trpkph}
      \end{subfigure}
-     \hfill
-    
+     \vspace{0.5cm}
+     
+      \begin{subfigure}[b]{0.96\textwidth}
+         \centering
+         \includegraphics[width=0.87\textwidth]{./figures/ph/tr_delta_pk.pdf}
+         \caption{}
+         \label{fig:trpkph}
+     \end{subfigure}
+
+ 
 	\caption{XXXX}
-	\label{fig:}
+	\label{fig:trpkph}
 \end{figure}
+
 
 \section{Persistent Homology with CRNs}
 
